--- a/src/services/i18n/locales/pt.json
+++ b/src/services/i18n/locales/pt.json
@@ -1,11 +1,15 @@
 {
+  "error":{
+    "apple_denied": "Apple não autorizou o compartilhamento das suas informações"
+  },
   "action":{
     "close" : "Fechar",
     "calculate": "Calcular"
   },
   "sign": {
     "join": "Entrar",
-    "sign_in_with_google" : "Entrar com o Google"
+    "sign_in_with_google" : "Entrar com o Google",
+    "sign_in_with_apple" : "Entrar com a Apple"
   },
   "home":{
     "hello":"Olá",
